# slipad

./: .gitignore  CMakeLists.txt  Makefile  README.md  _c_camera_8cpp.html  _c_camera_8cpp__incl.map  _c_camera_8cpp__incl.md5  _c_camera_8cpp_source.html  _c_character_dev_8cpp_source.html  _c_character_dev_8h.html  _c_character_dev_8h__dep__incl.map  _c_character_dev_8h__dep__incl.md5  _c_character_dev_8h__incl.map  _c_character_dev_8h__incl.md5  _c_character_dev_8h_source.html  _c_communication_8cpp_source.html  _c_communication_8h.html  _c_communication_8h__dep__incl.map  _c_communication_8h__incl.map  _c_communication_8h_source.html  _c_failure_detector_8cpp.html  _c_failure_detector_8cpp__incl.map  _c_failure_detector_8cpp__incl.md5  _c_failure_detector_8cpp_source.html  _c_failure_detector_8h_source.html  _c_gateway_8cpp_source.html  _c_gateway_8h_source.html  _c_lamp_8cpp.html  _c_lamp_8cpp__incl.map  _c_lamp_8cpp__incl.md5  _c_lamp_8cpp_source.html  _c_lamp_8h_source.html  _c_ldr_8cpp_source.html  _c_ldr_8h_source.html  _c_local_system_8cpp_source.html  _c_local_system_8h_source.html  _c_lora_comm_8cpp_source.html  _c_lora_comm_8h.html  _c_lora_comm_8h__dep__incl.map  _c_lora_comm_8h__incl.map  (+246 more)
.github/workflows/: main.yml
app/build-slipad-Android_Qt_6_2_3_Clang_arm64_v8a-Debug/: Makefile  android-slipad-deployment-settings.json  linker  moc_addLamp.cpp  moc_login.cpp  moc_menu.cpp  moc_modifyLamp.cpp  ui_addLamp.h  ui_menu.h  ui_slipad.h
app/slipad/: addLamp.cpp  addLamp.h  addLamp.ui  main.cpp  menu.cpp  menu.h  menu.ui  repairLamp.ui  slipad.cpp  slipad.h  slipad.pro  slipad.ui
code/: configs.txt  localsys.cpp  testspi.c
code/Classes/: CCamera.cpp  CCommunication.h  CLamp.cpp  CLocalSystem.h  CLoraComm.cpp  CLoraComm.h
code/PIRddriver/: Makefile  TesteButtonISR.c
code/database/: main.cpp
code/inc/: CParkDetection.h  LoRa.h
code/localSystem/: CCamera.h  CCommunication.cpp  CCommunication.h  CLoraComm.cpp  CLoraComm.h  Makefile  main.cpp  utils.h
code/lora/: LoRa.cpp  LoRa.h  Makefile  loratest  notes  rxTxCallbacks  test.cpp  testspi.cpp
code/src/: CLocalSystem.cpp  LoRa.cpp
code/tests/: testpwm.cpp
database/: slipad.sql  slipadPop.sql
ddrivers/: Makefile
ddrivers/lampf/: Makefile  lampfdriver.c
ddrivers/pir/: Makefile  pirdriver.c
doc/: OpenCV_INSTALL.txt  bookmarks.html  configs.txt
doc/deliveries/: group9.pptx  status_update.pptx
doc/doxygen/: Doxyfile
doc/layout/: Version2.fzz
doc/others/: lora_crypto.txt  notes_16_12
doc/report/: References.bib  acronyms.tex  report.brf  report.tex
documentation/: gpio_pins
documentation/flowcharts/: user_mockups
documentation/layout/: LightSensor.fzz  LightSensor_layout.xcf  LoRa.fzz  PIRSensor.fzz  PIRSensor_layout.xcf  Version1.fzz  Version2.fzz
ext/: Makefile_1
ext/daemon/: DEV_Config.h  TSL2581.h  main.c
ext/database/: BankTransaction.h
ext/tsl2581/: DEV_Config.c  Makefile  TSL2581.c  main
gateway/: Makefile  gateway.cpp
gateway/inc/: CGateway.h
gateway/src/: CGateway.cpp
inc/: CCamera.h  CCharacterDev.h  CCommunication.h  CFailureDetector.h  CGateway.h  CLamp.h  CLocalSystem.h  CLoraComm.h  CParkDetection.h  CPir.h  CRemoteClient.h  CRemoteSystem.h  CSensors.h  CTCPclient.h  CTCPcomm.h  CTCPserver.h  DEV_Config.h  LoRa.h  RCApplication.h  RCGateway.h  RCWebsite.h  debug.h  defs.h  interrupt.h  parser.h  timer.h  utils.h
localSystem/: CMakeLists.txt  Makefile  dSensors.cpp  localsys.cpp
localSystem/ddrivers/: Makefile
localSystem/ddrivers/lampf/: utils.c
localSystem/ddrivers/pir/: Makefile
localSystem/inc/: CCamera.h  CCharacterDev.h  CFailureDetector.h  CLamp.h  CLdr.h  CLocalSystem.h  CParkDetection.h  CPir.h  CSensors.h  DEV_Config.h  TSL2581.h
localSystem/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
localSystem/src/: CCamera.cpp  CCharacterDev.cpp  CFailureDetector.cpp  CLamp.cpp  CLdr.cpp  CLocalSystem.cpp  CParkDetection.cpp  CPir.cpp  CSensors.cpp  TSL2581.c
localSystem/tests/: testLAMPFisr.c  testPIRisr.c  testlampf_pol.c  testpir.cpp  testspi.cpp  testtsl.c
localSystem/tests/opencv/: CMakeLists.txt
opencv/: CMakeLists.txt  main.cpp
project/: Presentation.pptx  TEMPLATE.pptx  analysis_presentation.txt  components  group9.pptx  ideas_list.txt  lampFail.txt  link  links  notes  thread_def
project/report/: References.bib  acronyms.tex  changes.txt  data  problem_statement.odt  report.aux  report.aux~df23665d5f4f576ccd21cf552e3d78eb91b4d5df  report.bbl  report.blg  report.lof  report.lot  report.synctex(busy)  report.tex  report.toc  tools_cots.tex  user_mockups
remoteSystem/: Makefile  MySql_INSTALL  remotesys.cpp
remoteSystem/inc/: CRemoteClient.h  CRemoteSystem.h  CTCPserver.h  (+3 more)
remotesystem/: Makefile  slipad.sql  slipadPop.sql
report/: References.bib  acronyms.tex  report.synctex(busy)  report.tex
scripts/: S60localSys.sh  Sgateway.sh  Sinit.sh  init.sh  remoteSys.sh
search/: all_1.js  all_2.js  all_3.js  all_7.js  all_9.js  all_b.js  classes_4.js  files_1.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
src/: CCamera.cpp  CCharacterDev.cpp  CCommunication.cpp  CFailureDetector.cpp  CGateway.cpp  CLamp.cpp  CLdr.cpp  CLocalSystem.cpp  CLoraComm.cpp  CMakeCache.txt  CMakeLists.txt  CParkDetection.cpp  CPir.cpp  CRemoteClient.cpp  CRemoteSystem.cpp  CSensors.cpp  CTCPclient.cpp  CTCPcomm.cpp  CTCPserver.cpp  DEV_Config.c  LoRa.cpp  Makefile  RCGateway.cpp  TSL2581.c  cmake_install.cmake  debug.c  parser.cpp  slipad  testcamera.cpp  timer.cpp  utils.c
tests/: Makefile  parkdetection.cpp  schedprio.c  takeone.c  tcpclient.cpp  tcpserver.cpp  testLAMPFisr.c  testPIRisr.c  testcamera.cpp  testclassifier.cpp  testdaemon.c  testlampf.cpp  testlora.cpp  testpwm.cpp  testtcpclient.cpp  testtimer.c  testtsl.c
tests/testclassifier/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/testpark/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tv_remote/: links.txt  problem_statement.drawio  todo.txt
website/: index.html  index.php  install.txt
(+1403 files in other folders)
